[package]
name = "vor_mesh_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
vtkio = { version = "0.6.3", default-features = false, features = ["xml"] }

[dev-dependencies]
rand = "0.8.5"
