[package]
name = "vor_mesh_1"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.33.2", features = ["convert-bytemuck"]}
vtkio = { version = "0.7.0-rc1", default-features = false, features = ["xml"] }
hdf5-metno = "0.12.3"
ndarray = "*"

[dev-dependencies]
rand = "0.8.5"
